--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>用户登录后台</title>
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <title>vue-admin-start</title>
   </head>
   <body>
+    <noscript>
+      <strong>We're sorry but vue-admin-start doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
